--- a/src/Component/Hero/Hero.css
+++ b/src/Component/Hero/Hero.css
@@ -10,6 +10,26 @@
   align-items: flex-end;
 }
 
+/* LEFT SIDE  */
+.hero-left {
+  gap: 3rem;
+}
+.hero-title {
+  position: relative;
+  z-index: 1;
+}
+.hero-title > h1 {
+  font-weight: 600;
+  font-size: 3.8rem;
+  line-height: 4rem;
+}
+
+.orange-circle {
+  height: 4rem;
+  width: 4rem;
+}
+
+/* RIGHT SIDE */
 .image-container {
   width: 30rem;
   height: 35rem;
