--- a/src/Component/Hero/Hero.css
+++ b/src/Component/Hero/Hero.css
@@ -27,6 +27,12 @@
 .orange-circle {
   height: 4rem;
   width: 4rem;
+  background: var(--orange-gradient);
+  border-radius: 99px;
+  position: absolute;
+  right: 28%;
+  top: -10%;
+  z-index: -1;
 }
 
 /* RIGHT SIDE */
