--- a/src/Component/Hero/Hero.css
+++ b/src/Component/Hero/Hero.css
@@ -2,7 +2,7 @@
   color: white;
   position: relative;
   padding-bottom: 2rem;
-  background-color: var(--black);
+
 }
 
 .hero-container {
@@ -46,6 +46,17 @@
 .search-bar > input {
   border: none;
   outline: none;
+}
+
+.stats {
+  width: 100%;
+  justify-content: space-between;
+}
+.stat > :nth-child(1) {
+  font-size: 2rem;
+}
+.stat > :nth-child(1) > :last-child {
+  color: orange;
 }
 
 /* RIGHT SIDE */
