--- a/src/Component/Residencies/Residencies.css
+++ b/src/Component/Residencies/Residencies.css
@@ -26,3 +26,16 @@
   font-size: 0.7rem;
   width: 15rem;
 }
+
+.r-card:hover {
+  scale: 1.025;
+  cursor: pointer;
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(136, 160, 255, 0.46) 217.91%
+  );
+}
+.swiiper-horixontal {
+  overflow: visible;
+}
