--- a/src/Component/Residencies/Residencies.css
+++ b/src/Component/Residencies/Residencies.css
@@ -1,5 +1,6 @@
 .residencies-container {
   overflow: hidden;
+  position: relative;
 }
 
 .r-head {
@@ -42,4 +43,20 @@
 }
 .swiper-horizontal {
   overflow: visible;
+}
+
+.r-btn {
+  position: absolute;
+  gap: 1rem;
+  top: -4rem;
+  right: 0;
+}
+.r-btn button {
+  font-size: 1.2rem;
+  padding: 0.2rem 0.8rem;
+  color: blue;
+  border: none;
+  background-color: orange;
+  cursor: pointer;
+  border-radius: 5px;
 }
