--- a/src/Component/Value/Value.css
+++ b/src/Component/Value/Value.css
@@ -8,3 +8,43 @@
 .value-right {
   gap: 0.5rem;
 }
+
+.accordion {
+  margin-top: 2rem;
+  border: none;
+}
+
+.accordion-item {
+  background: white;
+  border: 0.8px solid rgba(128, 128, 128, 0.143);
+  border-radius: 8px;
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+
+.accordion-item.expanded {
+  box-shadow: var(--shadow);
+  border-radius: 6px;
+}
+
+.accordion-btn {
+  background-color: white;
+  padding: 1rem;
+  width: 100%;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.icon {
+  padding: 10px;
+  background: #eeeeff;
+  border-radius: 5px;
+}
+
+.icon svg {
+  fill: var(--blue);
+}
+
+.accordion-btn .primaryText {
+  font-size: 1.1rem;
+}
