--- a/src/Component/Contact/Contact.css
+++ b/src/Component/Contact/Contact.css
@@ -14,7 +14,7 @@
 }
 
 .contactModes {
-  margin-top: 20rem;
+  margin-top: 2rem;
   gap: 1.5rem;
 }
 
@@ -47,4 +47,15 @@
 .mode .detail .primaryText {
   font-size: 1.1rem;
   font-weight: 600;
+}
+
+.mode:hover {
+  scale: 1.1;
+  box-shadow: var(--shadow);
+}
+
+.mode .button:hover {
+  background: var(--blue-gradient);
+  color: white;
+  scale: 0.8;
 }
